--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta http-equiv="content-security-policy" content="">
 	<link rel="stylesheet" href="/aruco-web/_app/assets/pages/index.svelte-109e964e.css">
-	<link rel="modulepreload" href="/aruco-web/_app/start-68ee6443.js">
+	<link rel="modulepreload" href="/aruco-web/_app/start-a319aaed.js">
 	<link rel="modulepreload" href="/aruco-web/_app/chunks/index-c5ee12bd.js">
 	<link rel="modulepreload" href="/aruco-web/_app/chunks/index-f7dfcf04.js">
 	<link rel="modulepreload" href="/aruco-web/_app/layout.svelte-553adae6.js">
@@ -34,14 +34,14 @@
 
 
 		<script type="module" data-hydrate="19nzbxp">
-		import { start } from "/aruco-web/_app/start-68ee6443.js";
+		import { start } from "/aruco-web/_app/start-a319aaed.js";
 		start({
 			target: document.querySelector('[data-hydrate="19nzbxp"]').parentNode,
 			paths: {"base":"/aruco-web","assets":"/aruco-web"},
 			session: {},
 			route: true,
 			spa: false,
-			trailing_slash: "always",
+			trailing_slash: "never",
 			hydrate: {
 				status: 200,
 				error: null,
